ep5/src/main/java/org/teachfx/antlr4/JavaParser.java
// Generated from Java.g4 by ANTLR 4.8
package org.teachfx.antlr4.ep5;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
            T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
            T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
            T__52 = 53, T__53 = 54, T__54 = 55, T__55 = 56, T__56 = 57, T__57 = 58, T__58 = 59,
            T__59 = 60, T__60 = 61, T__61 = 62, T__62 = 63, T__63 = 64, T__64 = 65, T__65 = 66,
            T__66 = 67, T__67 = 68, T__68 = 69, T__69 = 70, T__70 = 71, T__71 = 72, T__72 = 73,
            T__73 = 74, T__74 = 75, T__75 = 76, T__76 = 77, T__77 = 78, T__78 = 79, T__79 = 80,
            T__80 = 81, T__81 = 82, T__82 = 83, T__83 = 84, T__84 = 85, T__85 = 86, T__86 = 87,
            T__87 = 88, T__88 = 89, HexLiteral = 90, DecimalLiteral = 91, OctalLiteral = 92,
            FloatingPointLiteral = 93, CharacterLiteral = 94, StringLiteral = 95, ENUM = 96,
            ASSERT = 97, Identifier = 98, COMMENT = 99, WS = 100, LINE_COMMENT = 101;
    public static final int
            RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2,
            RULE_typeDeclaration = 3, RULE_classDeclaration = 4, RULE_enumDeclaration = 5,
            RULE_interfaceDeclaration = 6, RULE_classOrInterfaceModifier = 7, RULE_modifiers = 8,
            RULE_typeParameters = 9, RULE_typeParameter = 10, RULE_typeBound = 11,
            RULE_enumBody = 12, RULE_enumConstants = 13, RULE_enumConstant = 14, RULE_enumBodyDeclarations = 15,
            RULE_normalInterfaceDeclaration = 16, RULE_typeList = 17, RULE_classBody = 18,
            RULE_interfaceBody = 19, RULE_classBodyDeclaration = 20, RULE_member = 21,
            RULE_methodDeclaration = 22, RULE_methodDeclarationRest = 23, RULE_genericMethodDeclaration = 24,
            RULE_fieldDeclaration = 25, RULE_constructorDeclaration = 26, RULE_interfaceBodyDeclaration = 27,
            RULE_interfaceMemberDecl = 28, RULE_interfaceMethodOrFieldDecl = 29, RULE_interfaceMethodOrFieldRest = 30,
            RULE_voidMethodDeclaratorRest = 31, RULE_interfaceMethodDeclaratorRest = 32,
            RULE_interfaceGenericMethodDecl = 33, RULE_voidInterfaceMethodDeclaratorRest = 34,
            RULE_constantDeclarator = 35, RULE_variableDeclarators = 36, RULE_variableDeclarator = 37,
            RULE_constantDeclaratorsRest = 38, RULE_constantDeclaratorRest = 39, RULE_variableDeclaratorId = 40,
            RULE_variableInitializer = 41, RULE_arrayInitializer = 42, RULE_modifier = 43,
            RULE_packageOrTypeName = 44, RULE_enumConstantName = 45, RULE_typeName = 46,
            RULE_type = 47, RULE_classOrInterfaceType = 48, RULE_primitiveType = 49,
            RULE_variableModifier = 50, RULE_typeArguments = 51, RULE_typeArgument = 52,
            RULE_qualifiedNameList = 53, RULE_formalParameters = 54, RULE_formalParameterDecls = 55,
            RULE_formalParameterDeclsRest = 56, RULE_methodBody = 57, RULE_constructorBody = 58,
            RULE_explicitConstructorInvocation = 59, RULE_qualifiedName = 60, RULE_literal = 61,
            RULE_integerLiteral = 62, RULE_booleanLiteral = 63, RULE_annotations = 64,
            RULE_annotation = 65, RULE_annotationName = 66, RULE_elementValuePairs = 67,
            RULE_elementValuePair = 68, RULE_elementValue = 69, RULE_elementValueArrayInitializer = 70,
            RULE_annotationTypeDeclaration = 71, RULE_annotationTypeBody = 72, RULE_annotationTypeElementDeclaration = 73,
            RULE_annotationTypeElementRest = 74, RULE_annotationMethodOrConstantRest = 75,
            RULE_annotationMethodRest = 76, RULE_annotationConstantRest = 77, RULE_defaultValue = 78,
            RULE_block = 79, RULE_blockStatement = 80, RULE_localVariableDeclarationStatement = 81,
            RULE_localVariableDeclaration = 82, RULE_variableModifiers = 83, RULE_statement = 84,
            RULE_catches = 85, RULE_catchClause = 86, RULE_formalParameter = 87, RULE_switchBlock = 88,
            RULE_switchBlockStatementGroup = 89, RULE_switchLabel = 90, RULE_forControl = 91,
            RULE_forInit = 92, RULE_enhancedForControl = 93, RULE_forUpdate = 94,
            RULE_parExpression = 95, RULE_expressionList = 96, RULE_statementExpression = 97,
            RULE_constantExpression = 98, RULE_expression = 99, RULE_primary = 100,
            RULE_creator = 101, RULE_createdName = 102, RULE_innerCreator = 103, RULE_explicitGenericInvocation = 104,
            RULE_arrayCreatorRest = 105, RULE_classCreatorRest = 106, RULE_nonWildcardTypeArguments = 107,
            RULE_arguments = 108;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public JavaParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "compilationUnit", "packageDeclaration", "importDeclaration", "typeDeclaration",
                "classDeclaration", "enumDeclaration", "interfaceDeclaration", "classOrInterfaceModifier",
                "modifiers", "typeParameters", "typeParameter", "typeBound", "enumBody",
                "enumConstants", "enumConstant", "enumBodyDeclarations", "normalInterfaceDeclaration",
                "typeList", "classBody", "interfaceBody", "classBodyDeclaration", "member",
                "methodDeclaration", "methodDeclarationRest", "genericMethodDeclaration",
                "fieldDeclaration", "constructorDeclaration", "interfaceBodyDeclaration",
                "interfaceMemberDecl", "interfaceMethodOrFieldDecl", "interfaceMethodOrFieldRest",
                "voidMethodDeclaratorRest", "interfaceMethodDeclaratorRest", "interfaceGenericMethodDecl",
                "voidInterfaceMethodDeclaratorRest", "constantDeclarator", "variableDeclarators",
                "variableDeclarator", "constantDeclaratorsRest", "constantDeclaratorRest",
                "variableDeclaratorId", "variableInitializer", "arrayInitializer", "modifier",
                "packageOrTypeName", "enumConstantName", "typeName", "type", "classOrInterfaceType",
                "primitiveType", "variableModifier", "typeArguments", "typeArgument",
                "qualifiedNameList", "formalParameters", "formalParameterDecls", "formalParameterDeclsRest",
                "methodBody", "constructorBody", "explicitConstructorInvocation", "qualifiedName",
                "literal", "integerLiteral", "booleanLiteral", "annotations", "annotation",
                "annotationName", "elementValuePairs", "elementValuePair", "elementValue",
                "elementValueArrayInitializer", "annotationTypeDeclaration", "annotationTypeBody",
                "annotationTypeElementDeclaration", "annotationTypeElementRest", "annotationMethodOrConstantRest",
                "annotationMethodRest", "annotationConstantRest", "defaultValue", "block",
                "blockStatement", "localVariableDeclarationStatement", "localVariableDeclaration",
                "variableModifiers", "statement", "catches", "catchClause", "formalParameter",
                "switchBlock", "switchBlockStatementGroup", "switchLabel", "forControl",
                "forInit", "enhancedForControl", "forUpdate", "parExpression", "expressionList",
                "statementExpression", "constantExpression", "expression", "primary",
                "creator", "createdName", "innerCreator", "explicitGenericInvocation",
                "arrayCreatorRest", "classCreatorRest", "nonWildcardTypeArguments", "arguments"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'package'", "';'", "'import'", "'static'", "'.'", "'*'", "'class'",
                "'extends'", "'implements'", "'public'", "'protected'", "'private'",
                "'abstract'", "'final'", "'strictfp'", "'<'", "','", "'>'", "'&'", "'{'",
                "'}'", "'interface'", "'['", "']'", "'void'", "'throws'", "'='", "'native'",
                "'synchronized'", "'transient'", "'volatile'", "'boolean'", "'char'",
                "'byte'", "'short'", "'int'", "'long'", "'float'", "'double'", "'?'",
                "'super'", "'('", "')'", "'...'", "'this'", "'null'", "'true'", "'false'",
                "'@'", "'default'", "':'", "'if'", "'else'", "'for'", "'while'", "'do'",
                "'try'", "'finally'", "'switch'", "'return'", "'throw'", "'break'", "'continue'",
                "'catch'", "'case'", "'new'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'",
                "'/'", "'%'", "'instanceof'", "'=='", "'!='", "'^'", "'|'", "'&&'", "'||'",
                "'^='", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'%='", null,
                null, null, null, null, null, "'enum'", "'assert'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, "HexLiteral", "DecimalLiteral", "OctalLiteral",
                "FloatingPointLiteral", "CharacterLiteral", "StringLiteral", "ENUM",
                "ASSERT", "Identifier", "COMMENT", "WS", "LINE_COMMENT"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Java.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final CompilationUnitContext compilationUnit() throws RecognitionException {
        CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_compilationUnit);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(219);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__0) {
                    {
                        setState(218);
                        packageDeclaration();
                    }
                }

                setState(224);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__2) {
                    {
                        {
                            setState(221);
                            importDeclaration();
                        }
                    }
                    setState(226);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(230);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__6) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__21) | (1L << T__48))) != 0) || _la == ENUM) {
                    {
                        {
                            setState(227);
                            typeDeclaration();
                        }
                    }
                    setState(232);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(233);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
        PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_packageDeclaration);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(235);
                match(T__0);
                setState(236);
                qualifiedName();
                setState(237);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ImportDeclarationContext importDeclaration() throws RecognitionException {
        ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_importDeclaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(239);
                match(T__2);
                setState(241);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__3) {
                    {
                        setState(240);
                        match(T__3);
                    }
                }

                setState(243);
                qualifiedName();
                setState(246);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__4) {
                    {
                        setState(244);
                        match(T__4);
                        setState(245);
                        match(T__5);
                    }
                }

                setState(248);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
        TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_typeDeclaration);
        try {
            int _alt;
            setState(262);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__3:
                case T__6:
                case T__9:
                case T__10:
                case T__11:
                case T__12:
                case T__13:
                case T__14:
                case T__21:
                case T__48:
                case ENUM:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(253);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                    while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                        if (_alt == 1) {
                            {
                                {
                                    setState(250);
                                    classOrInterfaceModifier();
                                }
                            }
                        }
                        setState(255);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                    }
                    setState(259);
                    _errHandler.sync(this);
                    switch (_input.LA(1)) {
                        case T__6: {
                            setState(256);
                            classDeclaration();
                        }
                        break;
                        case T__21:
                        case T__48: {
                            setState(257);
                            interfaceDeclaration();
                        }
                        break;
                        case ENUM: {
                            setState(258);
                            enumDeclaration();
                        }
                        break;
                        default:
                            throw new NoViableAltException(this);
                    }
                }
                break;
                case T__1:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(261);
                    match(T__1);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
